--- a/index.html
+++ b/index.html
@@ -1,24 +1,42 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="index">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="view-transition" content="same-origin" />
 
     <title>Index</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <nav class="nav">
         <ul class="nav__list list-reset">
-            <li class="nav__item nav__item--one"><a href="one/" class="nav__link">1</a></li>
-            <li class="nav__item nav__item--two"><a href="two/" class="nav__link">2</a></li>
-            <li class="nav__item nav__item--three"><a href="three/" class="nav__link">3</a></li>
-            <li class="nav__item nav__item--four"><a href="four/" class="nav__link">4</a></li>
+            <li class="nav__item nav__item--one">
+                <a href="one/" class="nav__link nav__link--one" style="view-transition-name: page-one"><span class="nav__label" style="view-transition-name: label-one">One</span></a>
+            </li>
+            <li class="nav__item nav__item--two">
+                <a href="two/" class="nav__link nav__link--two" style="view-transition-name: page-two"><span class="nav__label" style="view-transition-name: label-two">Two</span></a>
+            </li>
+            <li class="nav__item nav__item--three">
+                <a href="three/" class="nav__link nav__link--three" style="view-transition-name: page-three"><span class="nav__label" style="view-transition-name: label-three">Three</span></a>
+            </li>
+            <li class="nav__item nav__item--four">
+                <a href="four/" class="nav__link nav__link--four" style="view-transition-name: page-four"><span class="nav__label" style="view-transition-name: label-four">Four</span></a>
+            </li>
         </ul>
     </nav>
+    <script>
+        // const allLinks = document.querySelectorAll('.nav__link');
+        // allLinks.forEach(link => {
+        //     link.addEventListener('click', () => {
+        //         link.style.viewTransitionName = 'full-page';
+        //     });
+        // });
+    </script>
 </body>
 
 </html>
