--- a/two/index.html
+++ b/two/index.html
@@ -1,26 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="detail">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="view-transition" content="same-origin" />
 
     <title>Two</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../style.css">
 </head>
 
 <body>
-    <div class="page page--two">
+    <div class="page page--two" style="view-transition-name: page-two">
         <div class="page__body">
-            <h1>
+            <h1 style="view-transition-name: label-two">
                 Two
             </h1>
             <p>
                 Pretty cool, right?
             </p>
         </div>
-        <a class="page__back" href="../">Close</a>
+        <a class="page__back" href="../">
+            <span class="sr-only">Back</span>
+            <svg class="page__close" xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 256 256">
+                <rect width="256" height="256" fill="none" />
+                <path fill="currentColor" d="M128,24A104,104,0,1,0,232,128,104.11,104.11,0,0,0,128,24Zm37.66,130.34a8,8,0,0,1-11.32,11.32L128,139.31l-26.34,26.35a8,8,0,0,1-11.32-11.32L116.69,128,90.34,101.66a8,8,0,0,1,11.32-11.32L128,116.69l26.34-26.35a8,8,0,0,1,11.32,11.32L139.31,128Z" />
+            </svg>
+        </a>
     </div>
 </body>
 
